...
                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="doA-fK-3JY" customClass="LoginButton" customModule="ProtonVPN" customModuleProvider="target">
                            <rect key="frame" x="105" y="135" width="130" height="40"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="130" id="2sG-je-nEa"/>
                                <constraint firstAttribute="height" constant="40" id="Quq-12-M98"/>
                            </constraints>
                            <buttonCell key="cell" type="bevel" title="Login" bezelStyle="rounded" alignment="center" imageScaling="proportionallyDown" inset="2" id="yml-Pq-g1u">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
                            </buttonCell>
                        </button>
                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FhT-rA-7Im">
                            <rect key="frame" x="280" y="343" width="30" height="18"/>
...
                        </customView>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="bottom" secondItem="NOz-Sf-FlH" secondAttribute="bottom" constant="100" id="5HU-O9-bVK"/>
                        <constraint firstItem="NOz-Sf-FlH" firstAttribute="centerX" secondItem="u4S-T4-Dh2" secondAttribute="centerX" id="KiU-UB-9XP"/>
                    </constraints>
                    <accessibility identifier="loader"/>
                </customView>
                <imageView translatesAutoresizingMaskIntoConstraints="NO" id="lMo-f0-lr7">
                    <rect key="frame" x="70" y="495" width="200" height="40"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="oFP-uu-5R7"/>
                        <constraint firstAttribute="width" constant="200" id="vYX-xl-eng"/>
...
