...
                                                <rect key="frame" x="0.0" y="49" width="334" height="1"/>
                                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="1" id="AHx-Sm-f3b"/>
                                                </constraints>
                                            </view>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Voe-bO-TUc">
                                                <rect key="frame" x="40" y="11.5" width="294" height="22"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Username"/>
                                                <attributedString key="attributedText"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" enablesReturnKeyAutomatically="YES" textContentType="username"/>
                                            </textField>
                                        </subviews>
...
                                                <rect key="frame" x="0.0" y="9" width="20" height="20"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="20" id="CnM-kR-Wg2"/>
                                                    <constraint firstAttribute="width" secondItem="qYY-GH-UR1" secondAttribute="height" multiplier="1:1" id="dUX-ft-oj1"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bwp-nP-BhO">
                                                <rect key="frame" x="40" y="11.5" width="236" height="21"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
                                                <attributedString key="attributedText"/>
                                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="754" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MNS-09-wDR">
...
